# cellular-automata-simulation

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_web.bat  build_web.sh  run.js  setup_web.bat  setup_web.sh  start_server.bat  start_server.sh
docs/: index.html  sw.js  vaja_2.js
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/world/: cell.rs  mod.rs
